# otus-server

./: .gitignore  README.md  httpd.py  httptest.py  pyproject.toml
templates/: blog.html  index.html
